--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header-content">
             <div class="profile">
                 <div class="profile-img-container">
-                    <img src="assets/images/profile2.png" alt="Atul Mishra" class="profile-img">
+                    <img src="profile2.png" alt="Atul Mishra" class="profile-img">
                     <div class="profile-overlay"></div>
                 </div>
                 <div class="header-text">
