--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="header-text">
                     <h1 class="animate-text">Atul Mithilesh Mishra</h1>
-                    <h2 class="typewriter">Aspiring Full Stack Developer & Tech Enthusiast</h2>
+                    <h2 class="typewriter">Aspiring Developer & Tech Enthusiast</h2>
                     <div class="contact-info">
                         <a href="tel:+917841902883" class="contact-item hover-effect">
                             <i class="fas fa-phone"></i> +91 7841902883
@@ -223,7 +223,7 @@
                 <a href="tel:+917841902883" class="social-link hover-effect">
                     <i class="fas fa-phone"></i>
                 </a>
-                <a href="#" class="social-link hover-effect">
+                <a href="https://github.com/AtulMishra-28" class="social-link hover-effect">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
